--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,116 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇦🇺 澳大利亚-320.0KB/s(Youtube:不良林), server: 185.167.116.250, port: 9006, type: ss, cipher: aes-256-cfb, password: FAdUvMJUq5vDgKEq}
-  - {name: 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林), server: 185.167.116.250, port: 9043, type: ss, cipher: aes-256-cfb, password: HSZuyJQcWe8dxNdF}
-  - {name: 🇯🇵 日本-368.1KB/s(Youtube:不良林), server: 85.208.108.20, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇺🇸 美国-1.72MB/s(Youtube:不良林), server: s2.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s2.hazz.win, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-3.81MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
-  - {name: 🇨🇳 中国-2.33MB/s(Youtube:不良林), server: in-tw-2.onebox6.org, port: 38201, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-tw-2.onebox6.org}}
-  - {name: 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林), server: vau1.0bad.com, port: 443, type: vmess, uuid: 927094d3-d678-4763-8591-e240d0bcae87, alterId: 0, cipher: auto, tls: true, skip-cert-verify: true, network: ws, ws-path: /chat, ws-headers: {Host: vau1.0bad.com}}
+  - {name: 🇭🇰 香港-428.8KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
+  - {name: 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
+  - {name: 🇯🇵 日本-294.3KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
+  - {name: 🇯🇵 日本-2.14MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
+  - {name: 🇯🇵 日本-2.51MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
   - {name: 🇨🇳 中国-6.40MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇯🇵 日本-2.11MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
   - {name: 🇯🇵 日本-2.34MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇨🇳 中国-1.20MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-304.8KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-320.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇦🇺 澳大利亚-320.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-320.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇦🇺 澳大利亚-320.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇦🇺 澳大利亚-320.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-320.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +130,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇦🇺 澳大利亚-320.0KB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-1.27MB/s(Youtube:不良林)
-      - 🇯🇵 日本-368.1KB/s(Youtube:不良林)
-      - 🇺🇸 美国-1.72MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.81MB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.33MB/s(Youtube:不良林)
-      - 🇦🇺 澳大利亚-2.29MB/s(Youtube:不良林)
+      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
+      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
+      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
+      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
       - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
       - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
