--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,116 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇯🇵 日本-229.1KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇯🇵 日本-151.0KB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
+  - {name: 🇫🇷 法国-826.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
   - {name: 🇭🇰 香港-428.8KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
-  - {name: 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林), server: 47.243.227.118, port: 46108, type: vmess, uuid: 51f7927b-e4ae-44cc-acc8-605f2b662e2a, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: http, http-opts: {method: GET, path: [/], headers: {Host: [47.243.227.118]}}}
-  - {name: 🇯🇵 日本-294.3KB/s(Youtube:不良林), server: 85.208.108.93, port: 8118, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇯🇵 日本-2.14MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇯🇵 日本-2.51MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
-  - {name: 🇨🇳 中国-6.40MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇯🇵 日本-2.11MB/s(Youtube:不良林), server: 85.208.108.20, port: 5601, type: ss, cipher: aes-256-gcm, password: Y6R9pAtvxxzmGC}
-  - {name: 🇯🇵 日本-2.34MB/s(Youtube:不良林), server: 85.208.108.20, port: 6379, type: ss, cipher: aes-256-gcm, password: zDNVedRFPQexG9v}
+  - {name: 🇯🇵 日本-1.26MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
   - {name: 🇨🇳 中国-1.20MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
   - {name: 🇨🇳 中国-304.8KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
+  - {name: 🇰🇷 韩国-1.57MB/s(Youtube:不良林), server: 146.56.110.129, port: 15417, type: vmess, uuid: 81d30774-9e1b-4633-f8e1-90d5331dd68b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-405.3KB/s(Youtube:不良林), server: 146.56.110.129, port: 26401, type: vmess, uuid: 8906c760-4d98-4301-d84d-5b21937d7d61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
       - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -130,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
+      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
+      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
       - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇭🇰 (已存活2天)香港-3.77MB/s(Youtube:不良林)
-      - 🇯🇵 日本-294.3KB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.14MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.51MB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.40MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.11MB/s(Youtube:不良林)
-      - 🇯🇵 日本-2.34MB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
       - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
+      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
