--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,115 +5,114 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇯🇵 日本-229.1KB/s(Youtube:不良林), server: 85.208.108.93, port: 6679, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
-  - {name: 🇯🇵 日本-151.0KB/s(Youtube:不良林), server: 85.208.108.20, port: 7002, type: ss, cipher: aes-256-gcm, password: RexnBgU7EV5ADxG}
-  - {name: 🇫🇷 法国-826.6KB/s(Youtube:不良林), server: 54.36.174.181, port: 8119, type: ss, cipher: aes-256-gcm, password: cdBIDV42DCwnfIN}
-  - {name: 🇭🇰 香港-428.8KB/s(Youtube:不良林), server: xmrh021.xmrth-node.xyz, port: 15886, type: vmess, uuid: 9aef309d-fb15-3e90-8980-87bd22832a71, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /index, ws-headers: {Host: xmrh021.xmrth-node.xyz}}
-  - {name: 🇯🇵 日本-1.26MB/s(Youtube:不良林), server: 85.208.108.60, port: 8882, type: ss, cipher: aes-256-gcm, password: kDWvXYZoTBcGkC4}
-  - {name: 🇨🇳 中国-1.20MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-582.3KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-1.38MB/s(Youtube:不良林), server: s3.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s3.hazz.win, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-2.53MB/s(Youtube:不良林), server: in-us-1.onebox6.org, port: 38401, type: vmess, uuid: 79386685-16da-327c-9e14-aa6d702d86bc, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /hls/cctv5phd.m3u8, ws-headers: {Host: in-us-1.onebox6.org}}
+  - {name: 🇯🇵 日本-10.76MB/s(Youtube:不良林), server: 154.31.115.216, port: 57990, type: vmess, uuid: 3300c50a-ecbb-4df0-bd92-8c2d29a08cbb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-304.8KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65028, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇰🇷 韩国-1.57MB/s(Youtube:不良林), server: 146.56.110.129, port: 15417, type: vmess, uuid: 81d30774-9e1b-4633-f8e1-90d5331dd68b, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇰🇷 韩国-405.3KB/s(Youtube:不良林), server: 146.56.110.129, port: 26401, type: vmess, uuid: 8906c760-4d98-4301-d84d-5b21937d7d61, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true}
   - {name: 🇨🇳 中国-1.76MB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30003, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇰🇷 韩国-2.00MB/s(Youtube:不良林), server: kr04.wangxd.life, port: 3052, type: trojan, password: 3a2c0c6c-9ee5-c05f-c951-fcd73831983e, sni: kr04.wangxd.life, skip-cert-verify: true}
+  - {name: 柬埔寨-982.3KB/s(Youtube:不良林), server: kh1.nodegz.top, port: 444, type: trojan, password: c85f1706-0e63-46bf-8f05-3a2b95b5ba3c, sni: kh1.nodegz.top, skip-cert-verify: true}
+  - {name: 🇯🇵 日本-1.65MB/s(Youtube:不良林), server: 85.208.108.93, port: 7306, type: ss, cipher: aes-256-gcm, password: FoOiGlkAA9yPEGP}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-582.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 柬埔寨-982.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-582.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 柬埔寨-982.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-582.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 柬埔寨-982.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
-      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-582.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 柬埔寨-982.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-582.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 柬埔寨-982.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-582.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 柬埔寨-982.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -129,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇯🇵 日本-229.1KB/s(Youtube:不良林)
-      - 🇯🇵 日本-151.0KB/s(Youtube:不良林)
-      - 🇫🇷 法国-826.6KB/s(Youtube:不良林)
-      - 🇭🇰 香港-428.8KB/s(Youtube:不良林)
-      - 🇯🇵 日本-1.26MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.20MB/s(Youtube:不良林)
+      - 🇨🇳 中国-582.3KB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.38MB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.53MB/s(Youtube:不良林)
+      - 🇯🇵 日本-10.76MB/s(Youtube:不良林)
       - 🇨🇳 中国-304.8KB/s(Youtube:不良林)
-      - 🇰🇷 韩国-1.57MB/s(Youtube:不良林)
       - 🇰🇷 韩国-405.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-1.76MB/s(Youtube:不良林)
+      - 🇰🇷 韩国-2.00MB/s(Youtube:不良林)
+      - 柬埔寨-982.3KB/s(Youtube:不良林)
+      - 🇯🇵 日本-1.65MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
